# Tests

CoreFAPI/BackApp/python-user-recommendation/python-user-recommendation/: pyproject.toml
CoreFAPI/BackApp/python-user-recommendation/python-user-recommendation/app/: main.py  repositories.py
CoreFAPI/BackApp/python-user-recommendation/python-user-recommendation/app/db/migrations/: env.py
CoreFAPI/BackApp/python/280925/python/news_feed_app/: .gitignore  pyproject.toml
CoreFAPI/BackApp/python/280925/python/news_feed_app/__for_dev/dev/: docker-compose.yaml
CoreFAPI/BackApp/python/280925/python/news_feed_app/alembic/: env.py
CoreFAPI/BackApp/python/280925/python/news_feed_app/alembic/versions/: 34afd0830d6f_create_weight_tables.py  35c1fbe70bd1_fix_posts.py
CoreFAPI/BackApp/python/280925/python/news_feed_app/app/app_utils/: exception_handlers.py  rabbitmq_manager.py
CoreFAPI/BackApp/python/280925/python/news_feed_app/app/core/classes/: app.py
CoreFAPI/BackApp/python/280925/python/news_feed_app/app/database/models/: attachments.py
CoreFAPI/BackApp/python/280925/python/news_feed_app/app/rabbit_consumer/: consumer.py
CoreFAPI/BackApp/python/280925/python/news_feed_app/app/repositories/: hashtags.py  likes.py
CoreFAPI/BackApp/python/280925/python/news_feed_app/app/routers/comments/: access.py  delete_comment.py  get_comments.py  router.py  update_comment.py
CoreFAPI/BackApp/python/280925/python/news_feed_app/app/routers/likes/: __init__.py  router.py
CoreFAPI/BackApp/python/280925/python/news_feed_app/app/routers/media/: __init__.py  create_upload_file.py
CoreFAPI/BackApp/python/280925/python/news_feed_app/app/routers/posts/: create_repost.py
CoreFAPI/BackApp/python/280925/python/news_feed_app/app/schemas/: exception_schema.py  hashtags_weight.py
CoreFAPI/BackApp/python/280925/python/news_feed_app/app/services/: posts.py
CoreFAPI/LikeCR/: alembic.ini  docker-compose.yml
CoreFAPI/mock_auth/: main.py
(+1006 files in other folders)
