[project]
name = "news-feed-app"
version = "0.1.0"
description = ""
authors = [
    {name = "All"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "minio (>=7.2.15,<8.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "pika-stubs (>=0.1.3,<0.2.0)",
    "types-aiofiles (>=24.1.0.20250326,<25.0.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.test]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.25.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
flake8 = "^7.2.0"
flake8-bugbear = "^24.12.12"
flake8-pie = "^0.16.0"
flake8-docstrings = "^1.7.0"
flake8-type-checking = "^3.0.0"
